patched timing error
